--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
     "noEmit": true,
     "jsx": "preserve",
     "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "removeComments": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "removeComments": true
   },
   "include": [
     "src"
