--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "cypress": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
@@ -15,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "node_modules\\.bin\\cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
