--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "node_modules\\.bin\\cypress open",
+    "test:automatic": "node_modules\\.bin\\cypress run --browser chrome --spec 'cypress/integration/**/*'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
