--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "node_modules\\.bin\\cypress open"
+    "test": "node_modules\\.bin\\cypress open",
+    "test:automatic": "node_modules\\.bin\\cypress run --browser chrome --spec 'cypress/integration/*'"
   },
   "eslintConfig": {
     "extends": "react-app"
