--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "@types/styled-components": "^4.1.15",
     "cypress": "^3.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0",
     "typescript": "3.4.4"
   },
   "scripts": {
