--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "@types/smoothscroll-polyfill": "^0.3.1",
     "@types/styled-components": "^4.1.15",
+    "babel-polyfill": "^6.26.0",
     "cypress": "^3.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^4.2.0",
     "typescript": "3.4.4"
   },
