--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactgrid",
+  "name": "@silevis/reactgrid",
   "version": "2.0.0",
   "main": "lib/index.js",
   "typings": "ilb/index.d.ts",
