--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@silevis/reactgrid",
-  "version": "2.0.1-rc.12",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "version": "2.0.1-rc.18",
+  "main": "dist/reactgrid.js",
+  "typings": "dist/reactgrid.d.ts",
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "24.0.11",
@@ -10,7 +10,7 @@
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "^4.1.15",
-    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.2.1",
     "cypress": "^3.3.1",
     "react-scripts": "2.1.8",
     "react": "^16.8.6",
@@ -19,15 +19,13 @@
     "typescript": "3.4.4"
   },
   "peerDependencies": {
-    "babel-polyfill": "^6.26.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "pre-deploy": "tsc -p tsconfig.prod.json && echo 'Finished building NPM package'",
+    "pre-deploy": "rm -rf ./dist && tsc -p tsconfig.prod.json && echo 'Finished building NPM package'",
     "deploy": "npm publish && echo 'Finished publishing NPM package'",
     "eject": "react-scripts eject",
     "test": "node_modules\\.bin\\cypress open",
