--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,93 +4,108 @@ defaults: &defaults
 
 version: 2
 jobs:
-  upgrade-version-develop:
+  # upgrade-version-develop:
+  #   <<: *defaults
+
+  #   steps:
+  #     - checkout
+
+  #     - run:
+  #         name: Set configuration
+  #         command: git config --global user.email "$GITHUB_AUTHOR_EMAIL" && git config --global user.name "$GITHUB_AUTHOR_NAME"
+
+  #     - run:
+  #         name: Upgrade version
+  #         command: npm version prerelease --preid=rc -m "upgrade version [ci skip]"
+
+  #     - run:
+  #         name: Push upgraded version
+  #         command: git push https://$GITHUB_TOKEN@github.com/silevis/reactgrid.git develop
+
+  # upgrade-version-master:
+  #   <<: *defaults
+
+  #   steps:
+  #     - checkout
+
+  #     - restore_cache:
+  #         keys:
+  #           - v1-npm-deps-{{ checksum "package.json" }}
+  #           - v1-npm-deps-
+
+  #     - run: 
+  #         name: Install Dependencies
+  #         command: npm install
+
+  #     - save_cache:
+  #         paths:
+  #           - node_modules
+  #         key: v1-npm-deps-{{ checksum "package.json" }}
+
+  #     - run:
+  #         name: Remove suffix from package version
+  #         command: npm run remove-suffix
+
+  #     - run:
+  #         name: Set configuration
+  #         command: git config --global user.email "$GITHUB_AUTHOR_EMAIL" && git config --global user.name "$GITHUB_AUTHOR_NAME"
+
+  #     - run:
+  #         name: Add changes
+  #         command: git add .
+
+  #     - run:
+  #         name: Commit updated package version
+  #         command: git commit -m "upgrade version [ci skip]"
+
+  #     - run:
+  #         name: Push upgraded version
+  #         command: git push https://$GITHUB_TOKEN@github.com/silevis/reactgrid.git master
+
+  build-package:
     <<: *defaults
 
     steps:
       - checkout
-
-      - run:
-          name: Set configuration
-          command: git config --global user.email "$GITHUB_AUTHOR_EMAIL" && git config --global user.name "$GITHUB_AUTHOR_NAME"
-
-      - run:
-          name: Upgrade version
-          command: npm version prerelease --preid=rc -m "upgrade version [ci skip]"
-
-      - run:
-          name: Push upgraded version
-          command: git push https://$GITHUB_TOKEN@github.com/silevis/reactgrid.git develop
-
-  upgrade-version-master:
-    <<: *defaults
-
-    steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - v1-npm-deps-{{ checksum "package.json" }}
-            - v1-npm-deps-
-
-      - run: 
-          name: Install Dependencies
-          command: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-npm-deps-{{ checksum "package.json" }}
-
-      - run:
-          name: Remove suffix from package version
-          command: npm run remove-suffix
-
-      - run:
-          name: Set configuration
-          command: git config --global user.email "$GITHUB_AUTHOR_EMAIL" && git config --global user.name "$GITHUB_AUTHOR_NAME"
-
-      - run:
-          name: Add changes
-          command: git add .
-
-      - run:
-          name: Commit updated package version
-          command: git commit -m "upgrade version [ci skip]"
-
-      - run:
-          name: Push upgraded version
-          command: git push https://$GITHUB_TOKEN@github.com/silevis/reactgrid.git master
 
       - run:
           name: Build TypeScript code
           command: npm run pre-deploy
 
-  deploy:
-    <<: *defaults
+  # deploy:
+  #   <<: *defaults
 
-    steps:
-      - run:
-          name: Write NPM Token to ~/.npmrc
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+  #   steps:
+  #     - checkout
 
-      - run:
-          name: Publish to NPM
-          command: npm publish --access=public
+  #     - run:
+  #         name: Write NPM Token to ~/.npmrc
+  #         command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+
+  #     - run:
+  #         name: Publish to NPM
+  #         command: npm publish --access=public
 
 workflows:
   version: 2
   main:
     jobs:
-      - deploy
-      - upgrade-version-master:
-          filters:
-            branches:
-              only: master
-      - deploy:
-          requires:
-            - upgrade-version-master
-      - upgrade-version-develop:
+      # - deploy
+      - build-package:
           filters:
             branches:
               only: develop
+      # - upgrade-version-master:
+      #     filters:
+      #       branches:
+      #         only: master
+      # - build-package:
+      #     requires:
+      #       - upgrade-version-master
+      # - deploy:
+      #     requires:
+      #       - build-package
+      # - upgrade-version-develop:
+      #     filters:
+      #       branches:
+      #         only: develop
