--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           name: Push upgraded version
           command: git push https://$GITHUB_TOKEN@github.com/silevis/reactgrid.git develop
 
-  upgrade-version-master:
+  upgrade-version-master-and-publish:
     <<: *defaults
 
     steps:
@@ -47,6 +47,18 @@ jobs:
           key: v1-npm-deps-{{ checksum "package.json" }}
 
       - run:
+          name: Build TypeScript code
+          command: npm run pre-deploy
+
+      - run:
+          name: Write NPM Token to ~/.npmrc
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+
+      - run:
+          name: Publish to NPM
+          command: npm publish --access=public
+
+      - run:
           name: Set configuration
           command: git config --global user.email "$GITHUB_AUTHOR_EMAIL" && git config --global user.name "$GITHUB_AUTHOR_NAME"
 
@@ -62,51 +74,14 @@ jobs:
           name: Push upgraded version
           command: git push https://$GITHUB_TOKEN@github.com/silevis/reactgrid.git master
 
-  build-package:
-    <<: *defaults
-
-    steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - v1-npm-deps-{{ checksum "package.json" }}
-            - v1-npm-deps-
-
-      - run:
-          name: Build TypeScript code
-          command: npm run pre-deploy
-
-  deploy:
-    <<: *defaults
-
-    steps:
-      - checkout
-
-      - run:
-          name: Write NPM Token to ~/.npmrc
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-
-      - run:
-          name: Publish to NPM
-          command: npm publish --access=public
-
 workflows:
   version: 2
   main:
     jobs:
-      - deploy
-      - build-package
-      - upgrade-version-master:
+      - upgrade-version-master-and-publish:
           filters:
             branches:
               only: master
-      - build-package:
-          requires:
-            - upgrade-version-master
-      - deploy:
-          requires:
-            - build-package
       - upgrade-version-develop:
           filters:
             branches:
