--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ jobs:
           name: Upgrade version
           command: npm version prerelease --preid=rc -m "upgrade version [ci skip]"
 
-      - run:
+      - run: 
           name: Push upgraded version
-          command: git push https://git@github.com/silevis/reactgrid-samples.git develop
+          command: git push https://$GITHUB_TOKEN@github.com/silevis/reactgrid-samples.git develop
 
   upgrade-version-master-and-publish:
     <<: *defaults
