--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "@silevis/reactgrid": "^2.0.3",
+    "@types/react-router-dom": "^5.1.0",
+    "office-ui-fabric-react": "^7.53.1",
+    "react-router-dom": "^5.1.2",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
