--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "typings": "dist/reactgrid.d.ts",
   "dependencies": {},
   "devDependencies": {
-    "@silevis/reactgrid": "^2.0.3",
+    "@silevis/reactgrid": "^2.0.4",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "^4.1.15",
-    "core-js": "^3.2.1",
-    "cross-env": "^6.0.2",
+    "core-js": "^3.3.3",
+    "cross-env": "^6.0.3",
     "cypress": "^3.3.1",
     "npm-version-suffix": "^0.2.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.10.2",
     "react-scripts": "2.1.8",
-    "typescript": "3.4.4",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.4.0",
+    "typescript": "3.4.4"
   },
   "peerDependencies": {
     "react": "^16.8.6",
