--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@silevis/reactgrid-samples",
   "version": "2.0.3-rc.2",
-  "main": "dist/reactgrid.js",
-  "typings": "dist/reactgrid.d.ts",
+  "main": "dist/mainExports.js",
+  "typings": "dist/mainExports.d.ts",
   "dependencies": {},
   "devDependencies": {
     "@types/react-router-dom": "^5.1.0",
