--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "main": "dist/mainExports.js",
   "typings": "dist/mainExports.d.ts",
   "devDependencies": {
-    "@silevis/reactgrid": "^2.0.6",
+    "@silevis/reactgrid": "^2.0.7-rc.0",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^5.1.0",
-    "@types/styled-components": "^4.1.15",
-    "core-js": "^3.3.3",
+    "@types/styled-components": "^4.1.20",
+    "core-js": "^3.3.4",
     "cross-env": "^6.0.3",
     "cypress": "^3.5.0",
     "node-sass": "^4.13.0",
     "npm-version-suffix": "^0.2.0",
-    "office-ui-fabric-react": "^7.55.0",
+    "office-ui-fabric-react": "^7.55.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
