--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "typings": "dist/mainExports.d.ts",
   "dependencies": {},
   "devDependencies": {
-    "@silevis/reactgrid": "^2.0.6",
+    "@silevis/reactgrid": "github:silevis/reactgrid#build",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
