--- a/package.json
+++ b/package.json
@@ -47,5 +47,11 @@
   "browserslist": [
     ">0.2%",
     "not dead"
-  ]
+  ],
+  "dependencies": {
+    "@types/react-datepicker": "^2.9.4",
+    "react-date-picker": "^7.8.2",
+    "react-datepicker": "^2.10.0",
+    "react-time-picker": "^3.7.2"
+  }
 }
