--- a/package.json
+++ b/package.json
@@ -17,16 +17,14 @@
     "cypress": "^3.6.1",
     "node-sass": "^4.13.0",
     "npm-version-suffix": "^0.2.0",
-    "office-ui-fabric-react": "^7.60.0",
-    "react": "^16.11.0",
-    "react-date-picker": "^7.8.2",
-    "react-datepicker": "^2.10.0",
-    "react-dom": "^16.11.0",
+    "office-ui-fabric-react": "^7.64.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
     "react-time-picker": "^3.7.2",
     "styled-components": "^4.4.1",
-    "typescript": "3.4.4"
+    "typescript": "^3.7.2"
   },
   "peerDependencies": {
     "react": "^16.8.6",
