--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,14 @@ jobs:
           command: cd scripts
 
       - run:
+          name: List files
+          command: ls -all
+
+      - run:
+          name: chmod +x copyStyles.sh
+          command: chmod +x copyStyles.sh
+
+      - run:
           name: Run ./copyStyles.sh
           command: ./copyStyles.sh
 
