--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "@silevis/reactgrid-samples",
-  "version": "2.0.4",
+  "version": "3.0.0",
   "main": "dist/mainExports.js",
   "typings": "dist/mainExports.d.ts",
   "devDependencies": {
-    "@silevis/reactgrid": "github:silevis/reactgrid#build",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.6",
-    "@types/react": "16.9.15",
-    "@types/react-dom": "16.8.4",
+    "@types/node": "^11.15.7",
+    "@types/react": "^16.9.26",
+    "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.2",
-    "@types/styled-components": "^4.4.0",
-    "core-js": "^3.4.1",
+    "@types/styled-components": "^4.4.3",
+    "core-js": "^3.6.4",
     "cross-env": "^6.0.3",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "npm-version-suffix": "^0.2.0",
-    "office-ui-fabric-react": "^7.69.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "office-ui-fabric-react": "^7.105.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^2.1.8",
     "styled-components": "^4.4.1",
-    "typescript": "^3.7.3"
+    "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "^16.12.0",
