--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/mainExports.js",
   "typings": "dist/mainExports.d.ts",
   "devDependencies": {
+    "@silevis/reactgrid": "file:@silevis/reactgrid",
     "@types/node": "^11.15.7",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
