--- a/package.json
+++ b/package.json
@@ -4,26 +4,21 @@
   "main": "dist/mainExports.js",
   "typings": "dist/mainExports.d.ts",
   "devDependencies": {
-    "@silevis/reactgrid": "^3.0.4",
-    "@types/node": "^11.15.9",
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-router-dom": "^5.1.2",
+    "@silevis/reactgrid": "file:../../ReactGrid-Pro/dist",
+    "@types/node": "^11.15.12",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^4.4.3",
-    "core-js": "^3.6.4",
-    "cross-env": "^6.0.3",
-    "node-sass": "^4.13.1",
-    "npm-version-suffix": "^0.2.0",
-    "office-ui-fabric-react": "^7.105.9",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "node-sass": "^4.14.1",
+    "office-ui-fabric-react": "^7.114.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
-    "styled-components": "^4.4.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.2"
   },
   "peerDependencies": {
-    "react": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "styled-components": "^4.4.1"
   },
   "scripts": {
