--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,24 @@ jobs:
           name: Install Dependencies
           command: npm install
 
+      - run:
+          name: Write  NPM Token to ~/.npmrc
+          command: echo "registry=$REGISTRY_URLregistry/
+            always-auth=true
+
+            ; begin auth token
+            //$REGISTRY_URLregistry/:username=Silevis
+            //$REGISTRY_URLregistry/:_password=[$BASE64_ENCODED_PERSONAL_ACCESS_TOKEN]
+            //$REGISTRY_URLregistry/:email=patryk.eliasz@silevis.com
+            //$REGISTRY_URL:username=Silevis
+            //$REGISTRY_URL:_password=[$BASE64_ENCODED_PERSONAL_ACCESS_TOKEN]
+            //$REGISTRY_URL:email=patryk.eliasz@silevis.com
+            ; end auth token" >> ~/.npmrc
+
+      - run:
+          name: Install Dependencies
+          command: npm install
+
       - save_cache:
           paths:
             - node_modules
