--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "dist/mainExports.js",
   "typings": "dist/mainExports.d.ts",
   "devDependencies": {
-    "@silevis/reactgrid": "file:reactgrid-1.0.15.tgz",
     "@types/node": "^11.15.14",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
@@ -18,6 +17,9 @@
     "react-scripts": "^2.1.8",
     "styled-components": "^4.4.1",
     "typescript": "^3.9.3"
+  },
+  "peerDependencies": {
+    "@silevis/reactgrid": "file:reactgrid-1.0.15.tgz"
   },
   "scripts": {
     "start": "react-scripts start",
