--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:tsc": "rm -rf ./dist && tsc -p tsconfig.prod.json",
-    "copy:styles": "cd scripts && copyStyles.sh"
+    "copy:styles": "chmod +x ./scripts/copyStyles.sh && ./scripts/copyStyles.sh"
   },
   "keywords": [
     "react",
