--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "styled-components": "^4.4.1",
     "typescript": "^3.9.3"
   },
+  "peerDependencies": {
+    "@silevis/reactgrid": "file:reactgrid-1.0.15.tgz"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -34,8 +37,5 @@
   "browserslist": [
     ">0.2%",
     "not dead"
-  ],
-  "dependencies": {
-    "@silevis/reactgrid": "^1.0.15"
-  }
+  ]
 }
