--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "noEmit": true,
     "isolatedModules": true,
     "allowJs": true,
+    "downlevelIteration": true,
     "skipLibCheck": true
   },
   "include": [
