--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "not dead"
   ],
   "dependencies": {
-    "@use-it/interval": "^0.1.3"
+    "@types/react-color": "^3.0.4",
+    "@use-it/interval": "^0.1.3",
+    "react-color": "^2.18.1"
   }
 }
